# conj1349-gym-env

./: README.md  main.py  pyproject.toml  runenv.py
gymnasium_env/: __init__.py
gymnasium_env/envs/: __init__.py  conj1349.py  grid_world.py
gymnasium_env/wrappers/: clip_reward.py  discrete_actions.py  reacher_weighted_reward.py
modules/gymnasium_env/: __init__.py
modules/gymnasium_env/wrappers/: relative_position.py
