[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gymnasium_env"]

[project]
name = "gymnasium_env"
version = "0.0.1"
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "networkx>=3.4.2",
  "matplotlib>=3.10.0",
  "pre-commit",
]
